[gd_scene format=3 uid="uid://u1gfn45v12yd"]

[ext_resource type="Script" uid="uid://checflx6cgbvd" path="res://Scenes/Menus/Arena/arena_game_over_screen.gd" id="1_fww2u"]
[ext_resource type="Theme" uid="uid://caljym4n8ghq8" path="res://Assets/Styles/DefaultTheme.tres" id="2_cjqb1"]
[ext_resource type="Script" uid="uid://bxl2hwwcycl0s" path="res://Scripts/audio_button.gd" id="3_cgyu3"]
[ext_resource type="Texture2D" uid="uid://b8brtnmkw0arq" path="res://Assets/UI/GAME_OVER.png" id="4_upl4f"]
[ext_resource type="Texture2D" uid="uid://c02fkdaroc7h7" path="res://Assets/UI/GAME_HIGHSCORE.png" id="5_ghhf7"]
[ext_resource type="Texture2D" uid="uid://c851qixiss2k1" path="res://Assets/UI/GAME WINNER_draft.png" id="6_32wba"]

[sub_resource type="CanvasTexture" id="CanvasTexture_jx1af"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yr1h0"]
texture = SubResource("CanvasTexture_jx1af")
modulate_color = Color(0.886275, 0.878431, 0.87451, 1)

[node name="ArenaGameOverScreen" type="Control" unique_id=983769798]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fww2u")

[node name="WhiteBackgroundPanel" type="Panel" parent="." unique_id=1199670284]
z_index = -3
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yr1h0")

[node name="ButtonContainer" type="HBoxContainer" parent="." unique_id=256574603]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -120.0
offset_right = 199.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="RetryButton" type="Button" parent="ButtonContainer" unique_id=866540755]
z_index = -1
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme = ExtResource("2_cjqb1")
text = "Retry"
script = ExtResource("3_cgyu3")

[node name="LevelSelectButton" type="Button" parent="ButtonContainer" unique_id=2051601532]
z_index = -1
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme = ExtResource("2_cjqb1")
theme_override_font_sizes/font_size = 23
text = "Level 
Select"
script = ExtResource("3_cgyu3")

[node name="MainMenuButton" type="Button" parent="ButtonContainer" unique_id=1861003128]
z_index = -1
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme = ExtResource("2_cjqb1")
theme_override_font_sizes/font_size = 23
text = "Main Menu"
script = ExtResource("3_cgyu3")

[node name="Leaderboard" type="Button" parent="ButtonContainer" unique_id=1601366102]
visible = false
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme = ExtResource("2_cjqb1")
theme_override_font_sizes/font_size = 19
text = "Leaderboard"
script = ExtResource("3_cgyu3")

[node name="GameOverTex" type="TextureRect" parent="." unique_id=2099729880]
visible = false
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_upl4f")
expand_mode = 1
stretch_mode = 5

[node name="LongDogTex" type="TextureRect" parent="." unique_id=1827377968]
visible = false
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_ghhf7")
expand_mode = 1
stretch_mode = 5

[node name="WinnerTex" type="TextureRect" parent="." unique_id=981246149]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_32wba")
expand_mode = 1
stretch_mode = 5

[node name="PlacementsContainer" type="VBoxContainer" parent="." unique_id=207919987]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 33.0
offset_bottom = 609.0
grow_horizontal = 2

[node name="WinnerLabel" type="Label" parent="PlacementsContainer" unique_id=562710043]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 250
text = "Player won!"

[node name="ScoreLabelWinner" type="Label" parent="PlacementsContainer" unique_id=2071657287]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 119
text = "Player won!"

[node name="2ndPlaceContainer" type="HBoxContainer" parent="PlacementsContainer" unique_id=310509669]
layout_mode = 2

[node name="Second_Label" type="Label" parent="PlacementsContainer/2ndPlaceContainer" unique_id=943087271]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 120
text = "Second: "

[node name="Place_2" type="Label" parent="PlacementsContainer/2ndPlaceContainer" unique_id=449691615]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 120
text = "2"

[node name="3rdPlaceContainer" type="HBoxContainer" parent="PlacementsContainer" unique_id=1974703982]
layout_mode = 2

[node name="Third_Label" type="Label" parent="PlacementsContainer/3rdPlaceContainer" unique_id=2006973164]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 120
text = "Third: "

[node name="Place_3" type="Label" parent="PlacementsContainer/3rdPlaceContainer" unique_id=622810786]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 120
text = "3"

[node name="4thPlaceContainer" type="HBoxContainer" parent="PlacementsContainer" unique_id=729785327]
layout_mode = 2

[node name="Fourth_Label" type="Label" parent="PlacementsContainer/4thPlaceContainer" unique_id=334733283]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 120
text = "Fourth: "

[node name="Place_4" type="Label" parent="PlacementsContainer/4thPlaceContainer" unique_id=63744284]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_cjqb1")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 120
text = "4"

[connection signal="pressed" from="ButtonContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ButtonContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ButtonContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
